Added intelligent virtual assistant with llm in the application

--- a/ui/templates/form.html
+++ b/ui/templates/form.html
@@ -11,6 +11,11 @@
       <label for="inputState" class="form-label">Modelo para treinamento</label>
       <select id="inputState" class="form-select" name="model_name">
         <option value="image_classification" selected>Image Classification (Sequencial Model Keras)</option>
+        <option value="XCeption">XCeption</option>
+        <option value="VGG19">VGG19</option>
+        <option value="ResNet50">ResNet50</option>
+        <option value="MobileNet">MobileNet</option>
+        <option value="InceptionV3">InceptionV3</option>
       </select>
     </div>
     <div class="col-md-6">
