Added Exception handlers and organize architecture to code decoupling

--- a/ui/templates/form.html
+++ b/ui/templates/form.html
@@ -19,11 +19,11 @@
       </select>
     </div>
     <div class="col-md-6">
-      <label for="inputPassword4" class="form-label">Diretório de treinamento (no servidor)</label>
+      <label for="inp-train-directory" class="form-label">Diretório de treinamento (no servidor)</label>
       <input type="text" class="form-control" id="input-train-dir">
     </div>
     <div class="col-md-6">
-      <label for="inputEmail4" class="form-label">Diretório de teste (no servidor)</label>
+      <label for="inp-test-directory" class="form-label">Diretório de teste (no servidor)</label>
       <input type="text" class="form-control" id="inp-test-dir">
     </div>
     <div class="col-3">
