--- a/ui/templates/test_model.html
+++ b/ui/templates/test_model.html
@@ -13,8 +13,8 @@
     <span><b>Test Accuracy:</b> 0.168</span>
   </div>
   <div class="graphs">
-    <img src="{{ url_for('static', path='images/confusion_matrix.png') }}" alt="Confusion Matrix", style="width: 35%; height: auto;">
-    <img src="{{ url_for('static', path='images/Training and validation Loss and Accuracy.png') }}" alt="Confusion Matrix", style="width: 40%; height: auto;">
+    <img src="{{ url_for('static', path='images/confusion_matrix.png') }}" alt="Matriz Confusão", style="width: 35%; height: auto;">
+    <img src="{{ url_for('static', path='images/Training and validation Loss and Accuracy.png') }}" alt="Validation Loss e Accuracy", style="width: 40%; height: auto;">
   </div>
 </div>
 <div class="mb-3 col-5" style="margin: auto;">
@@ -44,6 +44,7 @@
           alert(`Prediction: ${data.predicted_class}`);
         })
         .catch((error) => {
+          console.log('Um erro ocorreu ao buscar informações de predição do modelo')
           console.error('Error:', error);
         });
       }
