LLM adjusted to understand different stages of training

--- a/ui/templates/test_model.html
+++ b/ui/templates/test_model.html
@@ -7,10 +7,10 @@
   <h3>Resultado do Modelo Treinado</h3>
   <div class="loss-accuracy">
     <span><b>Validation Loss:</b> {{validation_loss}} |</span>
-    <span><b>Validation Accuracy:</b> {{validation_accuracy}}</span>
+    <span><b>Validation Accuracy:</b> {{validation_accuracy}}%</span>
     <br/>
-    <span><b>Test Loss:</b> 0.168 |</span>
-    <span><b>Test Accuracy:</b> 0.168</span>
+    <span><b>Test Loss:</b> {{test_loss}} |</span>
+    <span><b>Test Accuracy:</b> {{test_accuracy}}%</span>
   </div>
   <div class="graphs">
     <img src="{{ url_for('static', path='images/confusion_matrix.png') }}" alt="Matriz Confusão", style="width: 35%; height: auto;">
