--- a/autotrain_with_llm/ui/templates/form.html
+++ b/autotrain_with_llm/ui/templates/form.html
@@ -69,5 +69,9 @@
     <span class="sr-only">O modelo está sendo treinado...</span>
     <a href="/logs_screen">Verificar Logs</a>
   </div>
+  <div id="loader-config-parameters" class="display-none">
+    <div class="spinner-border" role="status"></div>
+    <span class="sr-only">Preparando o ambiente para iniciar o treinamento</span>
+  </div>
 </div>
 {% endblock %}
