--- a/autotrain_with_llm/ui/statics/styles/home.css
+++ b/autotrain_with_llm/ui/statics/styles/home.css
@@ -7,41 +7,14 @@ body {
     margin: 1rem;
 }
 
-pre {
-    background-color: #f8f8f8;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    overflow: auto;
-    border-top-left-radius: 0px;
-    height: 82vh;
-}
+
 code {
     font-family: "Courier New", Courier, monospace;
 }
 
 .form {
     width: 50vw;
-    margin: auto;
-}
-
-#code-block {
-    width: 80vw;
-    margin: auto;
-}
-
-#clean-log, #copy-button {
-    width: 6.5vw;
-    border: 1px solid #ccc;
-    border-bottom: none;
-    border-radius: 5px;
-    font-size: 1.7vh;
-    border-bottom-left-radius: 0px;
-    border-bottom-right-radius: 0px;
-}
-
-#clean-log{
-    width: 10vw;
+    align-self: center;
 }
 
 i {
