--- a/autotrain_with_llm/ui/templates/index.html
+++ b/autotrain_with_llm/ui/templates/index.html
@@ -2,9 +2,12 @@
 <html>
 <head>
   <title>Ferramenta para auxílio no treinamento e avaliação de modelos</title>
+  <link rel="stylesheet" href="{{ url_for('static', path='styles/index.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', path='styles/logs.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', path='styles/home.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', path='styles/test_model.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', path='styles/chat.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', path='styles/database.css') }}">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/default.min.css">
@@ -15,27 +18,29 @@
     {% include "chat.html" %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="/">Home</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/test_model">Testar Modelo</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/logs_screen">Logs Gerados</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/source_code">Código Fonte</a>
-              </li>
-            </ul>
-          </div>
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/">Home</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="/database">Database</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="/logs_screen">Logs Gerados</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="/test_model">Testar Modelo</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/source_code">Código Fonte</a>
+            </li>
+          </ul>
         </div>
-      </nav>
-
+      </div>
+    </nav>
     <main>
         {% block content %}{% endblock %}
     </main>
