Function developed to copy dataset from absolute path to static directory

--- a/autotrain_with_llm/ui/templates/form.html
+++ b/autotrain_with_llm/ui/templates/form.html
@@ -46,10 +46,10 @@
   <!-- Input para o caminho absoluto -->
   <div id="absolutePathSection" style="display:none;">
       <label for="trainDatasetPath">Caminho do Dataset de Treinamento:</label>
-      <input type="text" id="trainDatasetPath" name="train_dataset_path" class="form-control" placeholder="Caminho absoluto do dataset de treinamento" value="C:\Development\Faculdade\TCC\train">
+      <input type="text" id="trainDatasetPath" name="train_dataset_path" class="form-control" placeholder="Caminho absoluto do dataset de treinamento" value="C:\Development\Faculdade\TCC\Utilitários\Datasets\Tumores\train">
       <br>
       <label for="valDatasetPath">Caminho do Dataset de Validação:</label>
-      <input type="text" id="valDatasetPath" name="valid_dataset_path" class="form-control" placeholder="Caminho absoluto do dataset de validação" value="C:\Development\Faculdade\TCC\test">
+      <input type="text" id="valDatasetPath" name="valid_dataset_path" class="form-control" placeholder="Caminho absoluto do dataset de validação" value="C:\Development\Faculdade\TCC\Utilitários\Datasets\Tumores\test">
   </div>
 
   <!-- Input para upload de arquivos -->
