Developed Home Page Draft

--- a/autotrain_with_llm/ui/templates/dataset.html
+++ b/autotrain_with_llm/ui/templates/dataset.html
@@ -3,7 +3,7 @@
 {% block title %}Configurações para treinamento do modelo{% endblock %}
 
 {% block content %}
-<script src="{{ url_for('static', path='/scripts/database.js') }}"></script>
+<script src="{{ url_for('static', path='/scripts/dataset.js') }}"></script>
 <div class="config-content">
   <div>
     <h3>Configuração atual do modelo</h3>
