--- a/autotrain_with_llm/ui/templates/index.html
+++ b/autotrain_with_llm/ui/templates/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="{{ url_for('static', path='styles/home.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', path='styles/test_model.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', path='styles/chat.css') }}">
-  <link rel="stylesheet" href="{{ url_for('static', path='styles/database.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', path='styles/dataset.css') }}">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/default.min.css">
@@ -26,7 +26,10 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/database">Database</a>
+              <a class="nav-link" href="/form">Configuração</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/dataset">Dataset</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="/logs_screen">Logs Gerados</a>
