Updated dataset page to get correct params config

--- a/autotrain_with_llm/ui/templates/dataset.html
+++ b/autotrain_with_llm/ui/templates/dataset.html
@@ -8,11 +8,26 @@
   <div>
     <h3>Configuração atual do modelo</h3>
     <div id="model_config">
-      <span><b>Modelo Selecionado:</b> XCeption</span>
-      <span><b>Epoch:</b> 1</span>
-      <span><b>seed:</b> 10</span>
-      <span><b>batch_size:</b> 10</span>
-      <span><b>shuffle:</b> true</span>
+      <div class="parameter">
+        <span class="model_name_label"><b>Modelo Selecionado:</b></span>
+        <span class="model_name_value">XCeption</span>
+      </div>
+      <div class="parameter">
+        <span class="epoch_label"><b>Epoch:</b></span>
+        <span class="epoch_value">1</span>
+      </div>
+      <div class="parameter">
+        <span class="seed_label"><b>Seeds:</b></span>
+        <span class="seed_value">10</span>
+      </div>
+      <div class="parameter">
+        <span class="batch_size_label"><b>Batch Size:</b></span>
+        <span class="batch_size_value">10</span>
+      </div>
+      <div class="parameter">
+        <span class="shuffle_label"><b>Shuffle:</b></span>
+        <span class="shuffle_value">true</span>
+      </div>
     </div>
   </div>
   <div id="container">
