--- a/autotrain_with_llm/ui/templates/dataset.html
+++ b/autotrain_with_llm/ui/templates/dataset.html
@@ -10,7 +10,7 @@
     <div id="model_config">
       <div class="parameter">
         <span class="model_name_label"><b>Modelo Selecionado:</b></span>
-        <span class="model_name_value">XCeption</span>
+        <span class="model_name_value"></span>
       </div>
       <div class="parameter">
         <span class="epoch_label"><b>Epoch:</b></span>
@@ -18,15 +18,15 @@
       </div>
       <div class="parameter">
         <span class="seed_label"><b>Seeds:</b></span>
-        <span class="seed_value">10</span>
+        <span class="seed_value"></span>
       </div>
       <div class="parameter">
         <span class="batch_size_label"><b>Batch Size:</b></span>
-        <span class="batch_size_value">10</span>
+        <span class="batch_size_value"></span>
       </div>
       <div class="parameter">
         <span class="shuffle_label"><b>Shuffle:</b></span>
-        <span class="shuffle_value">true</span>
+        <span class="shuffle_value"></span>
       </div>
     </div>
   </div>
@@ -37,6 +37,10 @@
     <div class="tab-contents">
     </div>
   </div>
+
+  <button id="btn-fit-model">
+    Iniciar treinamento do Modelo
+  </button>
 </div>
 
 
