--- a/autotrain_with_llm/ui/statics/styles/logs.css
+++ b/autotrain_with_llm/ui/statics/styles/logs.css
@@ -32,3 +32,14 @@ pre {
     margin-bottom: 1rem;
     overflow: auto;
 }
+
+#btn-test-model{
+    padding: 10px;
+    border-radius: 50px;
+    width: 25vw;
+    background-color: #5350C4;
+    color: white;
+    border: none;
+    text-decoration: none;
+    text-align: center;
+}
