--- a/autotrain_with_llm/ui/templates/test_model.html
+++ b/autotrain_with_llm/ui/templates/test_model.html
@@ -4,6 +4,14 @@
 
 {% block content %}
 <script src="{{ url_for('static', path='/scripts/test_model.js') }}"></script>
+<div id="container-steps">
+  <ul id="progress">
+    <li class="active">Configuração do Modelo</li>
+    <li class="active">Confirmação dos Parâmetros</li>
+    <li class="active">Treinamento do Modelo</li>
+    <li class="active">Treinamento Finalizado</li>
+  </ul>
+</div>
 <div class="result-model">
   <h3>Resultado do Modelo Treinado</h3>
   <div class="loss-accuracy">
