--- a/autotrain_with_llm/ui/statics/styles/index.css
+++ b/autotrain_with_llm/ui/statics/styles/index.css
@@ -12,13 +12,13 @@ html, body {
 }
 
 nav {
-    /* display: none !important; */
+    display: none !important;
 }
 
 main {
     display: flex;
     flex-direction: column;
-    height: calc(100vh - 56px);
+    height: 100vh;
 }
 
 #container-steps {
