--- a/autotrain_with_llm/ui/templates/chat.html
+++ b/autotrain_with_llm/ui/templates/chat.html
@@ -39,4 +39,5 @@
      </div>
   </div>
   <script src="{{ url_for('static', path='/scripts/chat.js') }}"></script>
+  <link rel="stylesheet" href="{{ url_for('static', path='styles/chat.css') }}">
 </body>
