--- a/autotrain_with_llm/ui/statics/styles/form.css
+++ b/autotrain_with_llm/ui/statics/styles/form.css
@@ -1,3 +1,34 @@
+.content-model-name {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.form {
+    width: 50vw;
+    align-self: center;
+}
+
+#loader-model-train, #loader-config-parameters {
+    margin-top: 4vh;
+    display: none;
+}
+
+.tool-details-text span{
+    display: block;
+}
+
+.btn-create-new-model {
+    margin-top: 30px;
+    padding: 15px;
+    border-radius: 10px;
+    background-color: #5350C4;
+    color: white;
+    border: none;
+    text-decoration: none;
+}
+
 dialog.source-code-dialog {
     border: none;
     padding: 20px;
