--- a/autotrain_with_llm/ui/templates/home.html
+++ b/autotrain_with_llm/ui/templates/home.html
@@ -30,5 +30,6 @@
     btnNewModel.addEventListener("click", () => window.location.href="/form")
   })
 </script>
+<link rel="stylesheet" href="{{ url_for('static', path='styles/home.css') }}">
 
 {% endblock %}
