--- a/autotrain_with_llm/ui/templates/logs.html
+++ b/autotrain_with_llm/ui/templates/logs.html
@@ -24,4 +24,5 @@
     </form>
 </div>
 <script src="{{ url_for('static', path='/scripts/logs.js') }}"></script>
+<link rel="stylesheet" href="{{ url_for('static', path='styles/logs.css') }}">
 {% endblock %}
