--- a/autotrain_with_llm/ui/statics/styles/form.css
+++ b/autotrain_with_llm/ui/statics/styles/form.css
@@ -6,7 +6,7 @@
 }
 
 .form {
-    width: 50vw;
+    width: 60vw;
     align-self: center;
 }
 
@@ -40,4 +40,16 @@ pre {
 code {
     height: 100%;
     overflow: auto;
+}
+
+#dataset-upload-section{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.train-section, .valid-section {
+    /* width: 40%; */
+    display: flex;
+    flex-direction: column;
 }
